<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"

    android:background="@drawable/frontpage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/name"
        android:textStyle="bold"

        />
    <ImageView
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/image"
        android:src="@drawable/weather_icon"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/imegrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/hintcity" />

    <Button
        android:layout_gravity="center"
        android:id="@+id/dugme1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dodaj"
        android:background="@drawable/shape"
        />
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/lista_gradova"></ListView>
</LinearLayout>