<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/imegrada2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GRAD:"
            android:textStyle="bold"
            android:layout_weight="1"
         />

        <TextView
            android:id="@+id/kojigrad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="111"
             />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       >

        <TextView
            android:id="@+id/dan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/day"
            android:textStyle="bold" />



        <TextView
            android:id="@+id/kojidan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            />

        <TextView
            android:layout_weight="7"
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="200dp"

            />



        <ImageButton
            android:id="@+id/refresh"
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:background="@drawable/refresh"
            />

    </LinearLayout>

    <Button
        android:id="@+id/statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/statistika"
        android:background="@drawable/shape"/>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/temperatura"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/temp"
            android:background="@drawable/shape"/>

        <Button
            android:id="@+id/sunce"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sunrise"
            android:background="@drawable/shape"/>

        <Button
            android:id="@+id/vetar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/wind"
            android:background="@drawable/shape"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
        <LinearLayout
            android:id="@+id/tempLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/sunImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/solnce"
                    />

                <TextView
                    android:id="@+id/sunTempText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />
                <TextView
                    android:id="@+id/sunPresText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />
                <TextView
                    android:id="@+id/sunHumText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                  />
            </LinearLayout>

            <Spinner
                android:id="@+id/dropdownmenu"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >


            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/sunriseLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/sunriseImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/sunrise"/>
            <TextView
                android:id="@+id/sunriseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               />
            <TextView
                android:id="@+id/sunsetText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/windLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/windImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/wind_speed1"/>
            <TextView
                android:id="@+id/windSpeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/windDirText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
    </FrameLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/stop_service"
        android:id="@+id/stop_service"/>
</LinearLayout>